# soxim

./: .gitignore  BUG_FIX_SUMMARY.md  BUG_REPORT.md  CHANGES.md  CLI_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  DEADLOCK_ANALYSIS.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NETWORK_STABILITY_FIX.md  NOC_SIMULATOR_COMPARISON.md  PUSH_TO_GITHUB.md  README.md  SWEEP_ANALYSIS_SUMMARY.md  VISUALIZATION_DEMO.md  VISUALIZATION_SUMMARY.md
.github/: CI_CD_DOCUMENTATION.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: example.toml  test_routing.toml
docs/: CLI_OPTIONS.md  DEVELOPMENT_HISTORY.md  TECHNICAL_DOCUMENTATION.md  USER_GUIDE.md
scripts/: README.md  analyze.py  compare.py  requirements.txt  run_tests.sh  saturation.py  sweep.py  topology_viz.py  visualize.py
simulator/: CMakeLists.txt  DataStructures.h  Parameters.h  Port.h  RegularNetwork.cpp  Router.cpp  Router.h  TerminalInterface.cpp  TerminalInterface.h  TrafficOperator.cpp  main.cpp  toml.hpp
simulator/configurations/: example.toml  test.toml
src/: CMakeLists.txt  Clock.cpp  Clock.h  DataStructures.cpp  Link.cpp  Link.h  Parameters.h  Register.cpp  Register.h  RegularNetwork.cpp  RegularNetwork.h  Router.cpp  Router.h  TerminalInterface.cpp  TrafficOperator.cpp  TrafficOperator.h  main.cpp
tests/: CMakeLists.txt  README.md
tests/unit/: CMakeLists.txt  test_clock.cpp  test_data_structures.cpp  test_register.cpp  test_router.cpp  test_routing.cpp  test_routing_algorithms.cpp  test_topology.cpp  test_traffic_operator.cpp
